--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "next": "^14.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.15"
   }
 }
