--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
   }
 }
